lib_LIBRARIES = libmemsystem.a

libmemsystem_a_SOURCES = \
	\
	atd.c \
	atd.h \
	\
	cache.c \
	cache.h \
	\
	cache-partitioning.c \
	cache-partitioning.h \
	\
	command.c \
	command.h \
	\
	config.c \
	config.h \
	\
	directory.c \
	directory.h \
	\
	fcp.c \
	fcp.h \
	\
	local-mem-protocol.c \
	local-mem-protocol.h \
	\
	mem-system.c \
	mem-system.h \
	\
	memory.c \
	memory.h \
	\
	mmu.c \
	mmu.h \
	\
	mod-stack.c \
	mod-stack.h \
	\
	module.c \
	module.h \
	\
	nmoesi-protocol.c \
	nmoesi-protocol.h \
	\
	spec-mem.c \
	spec-mem.h \
	\
	prefetch-history.c \
	prefetch-history.h \
	\
	prefetcher.c \
	prefetcher.h \
	\
	stream-prefetcher.c \
	stream-prefetcher.h \
	\
	ucp.c \
	ucp.h

INCLUDES = @M2S_INCLUDES@

